# Useful

./: .gitignore  CMakeLists_including_TBB  CMakeLists_with_Boost_C++.txt  CMakeLists_with_Boost_stackful_coroutines.txt  CMakeLists_with_Catch2_C++  CMakeLists_with_PostgreSQL.txt  How_to_install_Gtest_Gmock.txt  makefile_with_Boost_C++
Boost_Asio_stackful_coro/: CMakeLists.txt
Boost_Asio_stackful_coro/include/: stackful_coro.h
Boost_Asio_stackful_coro/src/: main.cpp  stackful_coro.cpp
Read_from_coprocess/: CMakeLists.txt  path_to_coprocess_bin.txt
Read_from_coprocess/coprocess/: main.cpp  makefile
Read_from_coprocess/src/: main.cpp
Read_write_between_two_processes/: CMakeLists.txt
Read_write_between_two_processes/src/: main.cpp
Tests/Google_Test/Sample6_unittest_TYPED_TEST/Tests/: CMakeLists.txt
Tests/Google_Test/Sample6_unittest_TYPED_TEST/Tests/src/: main.cpp  sample6_unittest.cc
Tests/Google_Test/TYPED_TEST_with_POD_types/Tests/: CMakeLists.txt
Tests/Google_Test/TYPED_TEST_with_POD_types/Tests/src/: main.cpp
Tests/Google_Test/To_square/Tests/: CMakeLists.txt  main.cpp  to_square_unit_tests.cpp  tst_to_square_unit_tests.h
Tests/Google_Test/To_square/include/: to_square.h
Tests/Google_Test/To_square/src/: main.cpp  to_square.cpp
Type_erasure_via_shared_ptr/: CMakeLists.txt
Type_erasure_via_shared_ptr/include/: type_erasure.h
Type_erasure_via_shared_ptr/src/: main.cpp
